# arlmrobot_ros_gazebo

arlmrobot_2dnav/: CMakeLists.txt  package.xml
arlmrobot_2dnav/config/: costmap_common_params.yaml  local_costmap_params.yaml
arlmrobot_2dnav/launch/: arlmrobot_config.launch  move_base.launch
arlmrobot_2dnav/maps/: roads_map.pgm  roads_map.yaml
arlmrobot_control/: CMakeLists.txt  package.xml
arlmrobot_control/config/: my_robot_control.yaml
arlmrobot_control/launch/: arlmrobot_control.launch
arlmrobot_description/: CMakeLists.txt  package.xml
arlmrobot_description/rviz/: example.rviz
arlmrobot_description/src/: pointcloudTransform.cpp
arlmrobot_description/urdf/: VLP-16.urdf.xacro  arlmrobot.urdf.xacro  imu.urdf.xacro  macros.xacro  vehcile.urdf  vehicle.urdf
arlmrobot_gazebo/: CMakeLists.txt  package.xml
arlmrobot_gazebo/launch/: arlmrobot.launch
arlmrobot_gazebo/world/: example2.world  mobile-robot.world  road-example.world  sensor-mapbuiding-test.world
